# InsightBoard-AI-Executive-Performance-Narrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  PHASE_3_ANOMALY_DETECTION.md  PHASE_4_VISUALIZATION.md  PHASE_9_RESILIENCE.md  PHASE_9_SUMMARY.md  README.md  pyproject.toml  test_visualization.py
app/: __init__.py  main.py
app/api/: __init__.py  router.py
app/api/routes/: contracts.py  health.py  reports.py
app/core/: config.py
app/models/: __init__.py  schemas.py
app/prompts/: context_templates.py  executive_summary.md  system_prompts.py
app/services/: __init__.py  analytics.py  anomaly.py  architecture.py  chart_explainer.py  ingestion.py  llm.py  narrative.py  pipeline.py  prompt_engineering.py  visualization.py
app/static/: app.js  index.html  styles.css
app/utils/: __init__.py
docs/: architecture.md  data-contracts.md
scripts/: run_dev.ps1
tests/: conftest.py  test_contracts.py  test_health.py  test_llm.py  test_pipeline.py  test_prompt_engineering.py  test_resilience.py
tests/fixtures/: dirty_daily_kpis.csv  monthly_kpis.csv
