[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "insightboard-executive-narrator"
version = "0.1.0"
description = "FastAPI service for KPI-driven executive summaries, anomaly commentary, and chart-aware reporting."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "InsightBoard Team" }
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "matplotlib>=3.9.0,<4.0.0",
  "numpy>=2.0.0,<3.0.0",
  "orjson>=3.10.0,<4.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.8.0,<1.0.0"
]
llm = [
  "openai>=1.0.0,<2.0.0",
  "google-genai>=1.0.0,<2.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
